feat(currency): Implementa API para conversión de divisas
Se añade la funcionalidad completa para convertir montos entre diferentes monedas utilizando una API externa. Incluye la creación del controlador, validador y rutas para la nueva sección de divisas. Se integra axios para las peticiones HTTP.

--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
   "homepage": "https://github.com/Duo-developers/backend_BankCCI#readme",
   "dependencies": {
     "argon2": "^0.43.0",
+    "axios": "^1.10.0",
     "cors": "^2.8.5",
     "dotenv": "^16.5.0",
     "express": "^5.1.0",
